--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 @@include('components/page-blocks/_head.html',{
 "lang":"en",
-"title":"Easy-webdev-startpack v3.0",
-"description":"Gulp pack for easy html/php markup development",
+"title":"o!zglitiba",
+"description":"o!zglitiba project",
 "keywords":"",
 "favicon":"img/favicons/favicon",
 })
 
 <body>
 	@@include('components/page-blocks/_header.html')
-	<main class="main"></main>
+	<main class="main">
+		@@include('components/page-blocks/_welcome.html')
+		@@include('components/page-blocks/_categories.html')
+		@@include('components/page-blocks/_instruments.html')
+	</main>
 	@@include('components/page-blocks/_footer.html')
 	@@include('components/page-blocks/_scripts.html')
 </body>
